[package]
name = "jp"
version = "0.4.0"
authors = ["Colin Reeder <vpzomtrrfrt@gmail.com>"]
description = "An attempt at a friendly graphics API"
license = "MIT"
repository = "https://github.com/vpzomtrrfrt/jp"

[dependencies]
piston2d-graphics = "0.23.0"
piston2d-opengl_graphics = "0.49.0"
piston = "0.35.0"
pistoncore-glutin_window = "0.42.0"
